# wordlesolvertauri

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json
css/: styles.css
js/: app.js  solver.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
